// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentDeclaration Basic Babel 1`] = `
{
  "body": [
    {
      "__componentDeclaration": true,
      "async": false,
      "body": {
        "body": [],
        "directives": [],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "Foo",
        "type": "Identifier",
      },
      "params": [],
      "returnType": {
        "type": "TypeAnnotation",
        "typeAnnotation": {
          "id": {
            "id": {
              "name": "Node",
              "type": "Identifier",
            },
            "qualification": {
              "name": "React",
              "type": "Identifier",
            },
            "type": "QualifiedTypeIdentifier",
          },
          "type": "GenericTypeAnnotation",
          "typeParameters": null,
        },
      },
      "type": "FunctionDeclaration",
    },
  ],
  "type": "Program",
}
`;

exports[`ComponentDeclaration Basic ESTree 1`] = `
{
  "body": [
    {
      "body": {
        "body": [],
        "type": "BlockStatement",
      },
      "id": {
        "name": "Foo",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "params": [],
      "rendersType": null,
      "type": "ComponentDeclaration",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;

exports[`ComponentDeclaration Complex params Babel 1`] = `
{
  "body": [
    {
      "__componentDeclaration": true,
      "async": false,
      "body": {
        "body": [],
        "directives": [],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "Foo",
        "type": "Identifier",
      },
      "params": [
        {
          "properties": [
            {
              "computed": false,
              "key": {
                "name": "bar",
                "type": "Identifier",
              },
              "method": false,
              "shorthand": true,
              "type": "ObjectProperty",
              "value": {
                "name": "bar",
                "type": "Identifier",
              },
            },
            {
              "computed": false,
              "key": {
                "name": "baz",
                "type": "Identifier",
              },
              "method": false,
              "shorthand": false,
              "type": "ObjectProperty",
              "value": {
                "name": "boo",
                "type": "Identifier",
              },
            },
            {
              "computed": false,
              "key": {
                "extra": {
                  "raw": "'data-bav'",
                  "rawValue": "data-bav",
                },
                "type": "StringLiteral",
                "value": "data-bav",
              },
              "method": false,
              "shorthand": false,
              "type": "ObjectProperty",
              "value": {
                "name": "bav",
                "type": "Identifier",
              },
            },
          ],
          "type": "ObjectPattern",
          "typeAnnotation": {
            "type": "TypeAnnotation",
            "typeAnnotation": {
              "id": {
                "name": "$ReadOnly",
                "type": "Identifier",
              },
              "type": "GenericTypeAnnotation",
              "typeParameters": {
                "params": [
                  {
                    "callProperties": [],
                    "exact": false,
                    "indexers": [],
                    "inexact": true,
                    "internalSlots": [],
                    "properties": [],
                    "type": "ObjectTypeAnnotation",
                  },
                ],
                "type": "TypeParameterInstantiation",
              },
            },
          },
        },
      ],
      "returnType": {
        "type": "TypeAnnotation",
        "typeAnnotation": {
          "id": {
            "id": {
              "name": "Node",
              "type": "Identifier",
            },
            "qualification": {
              "name": "React",
              "type": "Identifier",
            },
            "type": "QualifiedTypeIdentifier",
          },
          "type": "GenericTypeAnnotation",
          "typeParameters": null,
        },
      },
      "type": "FunctionDeclaration",
    },
  ],
  "type": "Program",
}
`;

exports[`ComponentDeclaration Complex params ESTree 1`] = `
{
  "body": [
    {
      "body": {
        "body": [],
        "type": "BlockStatement",
      },
      "id": {
        "name": "Foo",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "params": [
        {
          "local": {
            "name": "bar",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": {
              "type": "TypeAnnotation",
              "typeAnnotation": {
                "id": {
                  "name": "Bar",
                  "optional": false,
                  "type": "Identifier",
                  "typeAnnotation": null,
                },
                "type": "GenericTypeAnnotation",
                "typeParameters": null,
              },
            },
          },
          "name": {
            "name": "bar",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "shorthand": true,
          "type": "ComponentParameter",
        },
        {
          "local": {
            "name": "boo",
            "optional": true,
            "type": "Identifier",
            "typeAnnotation": {
              "type": "TypeAnnotation",
              "typeAnnotation": {
                "id": {
                  "name": "Baz",
                  "optional": false,
                  "type": "Identifier",
                  "typeAnnotation": null,
                },
                "type": "GenericTypeAnnotation",
                "typeParameters": null,
              },
            },
          },
          "name": {
            "name": "baz",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "shorthand": false,
          "type": "ComponentParameter",
        },
        {
          "local": {
            "name": "bav",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": {
              "type": "TypeAnnotation",
              "typeAnnotation": {
                "id": {
                  "name": "Bav",
                  "optional": false,
                  "type": "Identifier",
                  "typeAnnotation": null,
                },
                "type": "GenericTypeAnnotation",
                "typeParameters": null,
              },
            },
          },
          "name": {
            "literalType": "string",
            "raw": "'data-bav'",
            "type": "Literal",
            "value": "data-bav",
          },
          "shorthand": false,
          "type": "ComponentParameter",
        },
      ],
      "rendersType": null,
      "type": "ComponentDeclaration",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;

exports[`ComponentDeclaration default params Babel 1`] = `
{
  "body": [
    {
      "__componentDeclaration": true,
      "async": false,
      "body": {
        "body": [],
        "directives": [],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "Foo",
        "type": "Identifier",
      },
      "params": [
        {
          "properties": [
            {
              "computed": false,
              "key": {
                "name": "bar",
                "type": "Identifier",
              },
              "method": false,
              "shorthand": true,
              "type": "ObjectProperty",
              "value": {
                "left": {
                  "name": "bar",
                  "type": "Identifier",
                },
                "right": {
                  "extra": {
                    "raw": "''",
                    "rawValue": "",
                  },
                  "type": "StringLiteral",
                  "value": "",
                },
                "type": "AssignmentPattern",
              },
            },
          ],
          "type": "ObjectPattern",
          "typeAnnotation": {
            "type": "TypeAnnotation",
            "typeAnnotation": {
              "id": {
                "name": "$ReadOnly",
                "type": "Identifier",
              },
              "type": "GenericTypeAnnotation",
              "typeParameters": {
                "params": [
                  {
                    "callProperties": [],
                    "exact": false,
                    "indexers": [],
                    "inexact": true,
                    "internalSlots": [],
                    "properties": [],
                    "type": "ObjectTypeAnnotation",
                  },
                ],
                "type": "TypeParameterInstantiation",
              },
            },
          },
        },
      ],
      "returnType": {
        "type": "TypeAnnotation",
        "typeAnnotation": {
          "id": {
            "id": {
              "name": "Node",
              "type": "Identifier",
            },
            "qualification": {
              "name": "React",
              "type": "Identifier",
            },
            "type": "QualifiedTypeIdentifier",
          },
          "type": "GenericTypeAnnotation",
          "typeParameters": null,
        },
      },
      "type": "FunctionDeclaration",
    },
  ],
  "type": "Program",
}
`;

exports[`ComponentDeclaration default params ESTree 1`] = `
{
  "body": [
    {
      "body": {
        "body": [],
        "type": "BlockStatement",
      },
      "id": {
        "name": "Foo",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "params": [
        {
          "local": {
            "left": {
              "name": "bar",
              "optional": true,
              "type": "Identifier",
              "typeAnnotation": {
                "type": "TypeAnnotation",
                "typeAnnotation": {
                  "id": {
                    "name": "Bar",
                    "optional": false,
                    "type": "Identifier",
                    "typeAnnotation": null,
                  },
                  "type": "GenericTypeAnnotation",
                  "typeParameters": null,
                },
              },
            },
            "right": {
              "literalType": "string",
              "raw": "''",
              "type": "Literal",
              "value": "",
            },
            "type": "AssignmentPattern",
          },
          "name": {
            "name": "bar",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "shorthand": true,
          "type": "ComponentParameter",
        },
      ],
      "rendersType": null,
      "type": "ComponentDeclaration",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;

exports[`ComponentDeclaration normal and rest params Babel 1`] = `
{
  "body": [
    {
      "__componentDeclaration": true,
      "async": false,
      "body": {
        "body": [],
        "directives": [],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "Foo",
        "type": "Identifier",
      },
      "params": [
        {
          "properties": [
            {
              "computed": false,
              "key": {
                "name": "param1",
                "type": "Identifier",
              },
              "method": false,
              "shorthand": true,
              "type": "ObjectProperty",
              "value": {
                "name": "param1",
                "type": "Identifier",
              },
            },
            {
              "argument": {
                "properties": [
                  {
                    "computed": false,
                    "key": {
                      "name": "param2",
                      "type": "Identifier",
                    },
                    "method": false,
                    "shorthand": true,
                    "type": "ObjectProperty",
                    "value": {
                      "name": "param2",
                      "type": "Identifier",
                    },
                  },
                ],
                "type": "ObjectPattern",
              },
              "type": "RestElement",
              "typeAnnotation": null,
            },
          ],
          "type": "ObjectPattern",
          "typeAnnotation": {
            "type": "TypeAnnotation",
            "typeAnnotation": {
              "id": {
                "name": "$ReadOnly",
                "type": "Identifier",
              },
              "type": "GenericTypeAnnotation",
              "typeParameters": {
                "params": [
                  {
                    "callProperties": [],
                    "exact": false,
                    "indexers": [],
                    "inexact": true,
                    "internalSlots": [],
                    "properties": [],
                    "type": "ObjectTypeAnnotation",
                  },
                ],
                "type": "TypeParameterInstantiation",
              },
            },
          },
        },
      ],
      "returnType": {
        "type": "TypeAnnotation",
        "typeAnnotation": {
          "id": {
            "id": {
              "name": "Node",
              "type": "Identifier",
            },
            "qualification": {
              "name": "React",
              "type": "Identifier",
            },
            "type": "QualifiedTypeIdentifier",
          },
          "type": "GenericTypeAnnotation",
          "typeParameters": null,
        },
      },
      "type": "FunctionDeclaration",
    },
  ],
  "type": "Program",
}
`;

exports[`ComponentDeclaration normal and rest params ESTree 1`] = `
{
  "body": [
    {
      "body": {
        "body": [],
        "type": "BlockStatement",
      },
      "id": {
        "name": "Foo",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "params": [
        {
          "local": {
            "name": "param1",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": {
              "type": "TypeAnnotation",
              "typeAnnotation": {
                "type": "StringTypeAnnotation",
              },
            },
          },
          "name": {
            "name": "param1",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "shorthand": true,
          "type": "ComponentParameter",
        },
        {
          "argument": {
            "properties": [
              {
                "computed": false,
                "key": {
                  "name": "param2",
                  "optional": false,
                  "type": "Identifier",
                  "typeAnnotation": null,
                },
                "kind": "init",
                "method": false,
                "shorthand": true,
                "type": "Property",
                "value": {
                  "name": "param2",
                  "optional": false,
                  "type": "Identifier",
                  "typeAnnotation": null,
                },
              },
            ],
            "type": "ObjectPattern",
            "typeAnnotation": {
              "type": "TypeAnnotation",
              "typeAnnotation": {
                "id": {
                  "name": "Props",
                  "optional": false,
                  "type": "Identifier",
                  "typeAnnotation": null,
                },
                "type": "GenericTypeAnnotation",
                "typeParameters": null,
              },
            },
          },
          "type": "RestElement",
        },
      ],
      "rendersType": null,
      "type": "ComponentDeclaration",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;

exports[`ComponentDeclaration rest params Babel 1`] = `
{
  "body": [
    {
      "__componentDeclaration": true,
      "async": false,
      "body": {
        "body": [],
        "directives": [],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "Foo",
        "type": "Identifier",
      },
      "params": [
        {
          "name": "props",
          "type": "Identifier",
          "typeAnnotation": {
            "type": "TypeAnnotation",
            "typeAnnotation": {
              "id": {
                "name": "$ReadOnly",
                "type": "Identifier",
              },
              "type": "GenericTypeAnnotation",
              "typeParameters": {
                "params": [
                  {
                    "callProperties": [],
                    "exact": false,
                    "indexers": [],
                    "inexact": true,
                    "internalSlots": [],
                    "properties": [],
                    "type": "ObjectTypeAnnotation",
                  },
                ],
                "type": "TypeParameterInstantiation",
              },
            },
          },
        },
      ],
      "returnType": {
        "type": "TypeAnnotation",
        "typeAnnotation": {
          "id": {
            "id": {
              "name": "Node",
              "type": "Identifier",
            },
            "qualification": {
              "name": "React",
              "type": "Identifier",
            },
            "type": "QualifiedTypeIdentifier",
          },
          "type": "GenericTypeAnnotation",
          "typeParameters": null,
        },
      },
      "type": "FunctionDeclaration",
    },
  ],
  "type": "Program",
}
`;

exports[`ComponentDeclaration rest params ESTree 1`] = `
{
  "body": [
    {
      "body": {
        "body": [],
        "type": "BlockStatement",
      },
      "id": {
        "name": "Foo",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "params": [
        {
          "argument": {
            "name": "props",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": {
              "type": "TypeAnnotation",
              "typeAnnotation": {
                "id": {
                  "name": "Props",
                  "optional": false,
                  "type": "Identifier",
                  "typeAnnotation": null,
                },
                "type": "GenericTypeAnnotation",
                "typeParameters": null,
              },
            },
          },
          "type": "RestElement",
        },
      ],
      "rendersType": null,
      "type": "ComponentDeclaration",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;

exports[`ComponentDeclaration return type Babel 1`] = `
{
  "body": [
    {
      "__componentDeclaration": true,
      "async": false,
      "body": {
        "body": [],
        "directives": [],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "Foo",
        "type": "Identifier",
      },
      "params": [],
      "returnType": {
        "type": "TypeAnnotation",
        "typeAnnotation": {
          "id": {
            "name": "SpecialType",
            "type": "Identifier",
          },
          "type": "GenericTypeAnnotation",
          "typeParameters": null,
        },
      },
      "type": "FunctionDeclaration",
    },
  ],
  "type": "Program",
}
`;

exports[`ComponentDeclaration return type ESTree 1`] = `
{
  "body": [
    {
      "body": {
        "body": [],
        "type": "BlockStatement",
      },
      "id": {
        "name": "Foo",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "params": [],
      "rendersType": {
        "type": "TypeAnnotation",
        "typeAnnotation": {
          "id": {
            "name": "SpecialType",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "type": "GenericTypeAnnotation",
          "typeParameters": null,
        },
      },
      "type": "ComponentDeclaration",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;

exports[`ComponentDeclaration type parameters Babel 1`] = `
{
  "body": [
    {
      "__componentDeclaration": true,
      "async": false,
      "body": {
        "body": [],
        "directives": [],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "Foo",
        "type": "Identifier",
      },
      "params": [
        {
          "properties": [
            {
              "computed": false,
              "key": {
                "name": "bar",
                "type": "Identifier",
              },
              "method": false,
              "shorthand": true,
              "type": "ObjectProperty",
              "value": {
                "name": "bar",
                "type": "Identifier",
              },
            },
          ],
          "type": "ObjectPattern",
          "typeAnnotation": {
            "type": "TypeAnnotation",
            "typeAnnotation": {
              "id": {
                "name": "$ReadOnly",
                "type": "Identifier",
              },
              "type": "GenericTypeAnnotation",
              "typeParameters": {
                "params": [
                  {
                    "callProperties": [],
                    "exact": false,
                    "indexers": [],
                    "inexact": true,
                    "internalSlots": [],
                    "properties": [],
                    "type": "ObjectTypeAnnotation",
                  },
                ],
                "type": "TypeParameterInstantiation",
              },
            },
          },
        },
      ],
      "returnType": {
        "type": "TypeAnnotation",
        "typeAnnotation": {
          "id": {
            "name": "T2",
            "type": "Identifier",
          },
          "type": "GenericTypeAnnotation",
          "typeParameters": null,
        },
      },
      "type": "FunctionDeclaration",
      "typeParameters": {
        "params": [
          {
            "bound": null,
            "default": null,
            "name": "T1",
            "type": "TypeParameter",
            "usesExtendsBound": false,
            "variance": null,
          },
          {
            "bound": null,
            "default": null,
            "name": "T2",
            "type": "TypeParameter",
            "usesExtendsBound": false,
            "variance": null,
          },
        ],
        "type": "TypeParameterDeclaration",
      },
    },
  ],
  "type": "Program",
}
`;

exports[`ComponentDeclaration type parameters ESTree 1`] = `
{
  "body": [
    {
      "body": {
        "body": [],
        "type": "BlockStatement",
      },
      "id": {
        "name": "Foo",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "params": [
        {
          "local": {
            "name": "bar",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": {
              "type": "TypeAnnotation",
              "typeAnnotation": {
                "id": {
                  "name": "T1",
                  "optional": false,
                  "type": "Identifier",
                  "typeAnnotation": null,
                },
                "type": "GenericTypeAnnotation",
                "typeParameters": null,
              },
            },
          },
          "name": {
            "name": "bar",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "shorthand": true,
          "type": "ComponentParameter",
        },
      ],
      "rendersType": {
        "type": "TypeAnnotation",
        "typeAnnotation": {
          "id": {
            "name": "T2",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "type": "GenericTypeAnnotation",
          "typeParameters": null,
        },
      },
      "type": "ComponentDeclaration",
      "typeParameters": {
        "params": [
          {
            "bound": null,
            "default": null,
            "name": "T1",
            "type": "TypeParameter",
            "usesExtendsBound": false,
            "variance": null,
          },
          {
            "bound": null,
            "default": null,
            "name": "T2",
            "type": "TypeParameter",
            "usesExtendsBound": false,
            "variance": null,
          },
        ],
        "type": "TypeParameterDeclaration",
      },
    },
  ],
  "type": "Program",
}
`;
